bk_ida/gccida/c0/initial_reg_note_copy
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initial_reg_note_copy/src/unroll.c:2174:21: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
copy = rtx_alloc( ( rtx_code)( unsigned __int16)*( _DWORD *)notes); 
                    ^~~~~~~~
                    rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initial_reg_note_copy/src/unroll.c:2174:32: error: expected expression
copy = rtx_alloc( ( rtx_code)( unsigned __int16)*( _DWORD *)notes); 
                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/initial_reg_note_copy/src/obj/unroll.o] Error 1
